Prevent MSRP from being clickable on mobile view in Safari
Safari seems to think the format 201.000 is a phone number. Nice.

Fixes DD 71427 446

--- a/app/design/frontend/Travers/default/Magento_Catalog/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_Catalog/styles/module/_common.scss
@@ -985,6 +985,11 @@ body.catalog-product-compare-index {
                         padding-right: 0;
                     }
                 }
+
+                &[data-th="Manufacturer Price"] {
+                    pointer-events: none;
+                    color: $text__color;
+                }
             }
         }
     }
